--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -46,11 +49,12 @@
 .topMenu {
   width: 150px;
   height: 50px;
+  padding: 10px;
+
   border: 1px solid #000;
   border-right: none;
-  padding: 5px 10px;
   box-sizing: border-box;
-  padding: 10px;
+
   cursor: pointer;
   position: relative;
 }
@@ -69,29 +73,36 @@
   border-right: 1px solid #000;
 }
 
-.topMenu > ul {
+.topMenu>ul {
   display: none;
-  list-style-type: none;
   position: absolute;
   left: 0;
   top: 50px;
-  padding: 0;
+
+  list-style-type: none;
+
   width: 100%;
+  padding: 0;
+
   border: 2px solid #000;
   box-sizing: border-box;
+
   background-color: #fff;
 }
 
-.topMenu > ul > li {
+.topMenu>ul>li {
+  width: 100%;
   padding: 5px;
+
   text-align: center;
+
   background-color: #fff;
   color: #000;
-  width: 100%;
+
   box-sizing: border-box;
 }
 
-.topMenu > ul > li:hover {
+.topMenu>ul>li:hover {
   background-color: #000;
   color: #fff;
 }
@@ -99,8 +110,9 @@
 .sectionBox {
   width: 400px;
   height: 100%;
-  border: 1px solid #000;
   margin-right: 10px;
+
+  border: 1px solid #000;
 }
 
 .sectionBox:last-child {
@@ -110,19 +122,21 @@
 .imgBox {
   width: 400px;
   height: 300px;
+  padding-top: 150px;
+
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(100,100,100,30%);
+
+  background-color: rgba(100, 100, 100, 30%);
+  box-sizing: border-box;
   z-index: -1;
+
   font-size: 30px;
   font-weight: 600;
-  padding-top: 150px;
-  box-sizing: border-box;
   color: #fff;
 }
 
 .hoverBox:hover .imgBox {
   z-index: 5;
 }
-
