--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@
   top: 0;
   left: 0;
 
-  background-color: rgba(100, 100, 100, 30%);
+  background-color: rgba(100,100,100, 30%);
   box-sizing: border-box;
   z-index: -1;
 
@@ -139,4 +139,9 @@
 
 .hoverBox:hover .imgBox {
   z-index: 5;
+}
+
+.infoList {
+  padding: 5px;
+  cursor: pointer;
 }
