--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@
 
 /* =========================================== */
 
+* {
+  color: #333;
+}
+
 .topMenu {
   width: 150px;
   height: 50px;
@@ -142,6 +146,33 @@
 }
 
 .infoList {
-  padding: 5px;
+  padding: 5px 10px;
   cursor: pointer;
+
+}
+
+.infoList:hover {
+  background-color: #ccc;
+}
+
+.rubik-bubbles-regular {
+  font-family: "Rubik Bubbles", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.red {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
+
+.yellow {
+  color: yellow;
+}
+
+.purple {
+  color: purple;
 }
