--- a/src/App.css
+++ b/src/App.css
@@ -1,158 +1,12 @@
+body {
+  background: #f5f6fa;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-/* =========================================== */
-
-* {
-  color: #333;
-}
-
-.topMenu {
-  width: 150px;
-  height: 50px;
-  padding: 10px;
-
-  border: 1px solid #000;
-  border-right: none;
-  box-sizing: border-box;
-
-  cursor: pointer;
-  position: relative;
-}
-
-.topMenu:hover {
-  background-color: #000;
-  color: #fff;
-}
-
-.topMenu:hover ul {
-  display: block;
-  z-index: 10;
-}
-
-.topMenu:last-child {
-  border-right: 1px solid #000;
-}
-
-.topMenu>ul {
-  display: none;
-  position: absolute;
-  left: 0;
-  top: 50px;
-
-  list-style-type: none;
-
-  width: 100%;
-  padding: 0;
-
-  border: 2px solid #000;
-  box-sizing: border-box;
-
-  background-color: #fff;
-}
-
-.topMenu>ul>li {
-  width: 100%;
-  padding: 5px;
-
-  text-align: center;
-
-  background-color: #fff;
-  color: #000;
-
-  box-sizing: border-box;
-}
-
-.topMenu>ul>li:hover {
-  background-color: #000;
-  color: #fff;
-}
-
-.sectionBox {
-  width: 400px;
-  height: 100%;
-  margin-right: 10px;
-
-  border: 1px solid #000;
-}
-
-.sectionBox:last-child {
+  max-width: 100vw;
   margin: 0;
-}
-
-.imgBox {
-  width: 400px;
-  height: 300px;
-  padding-top: 150px;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  background-color: rgba(100,100,100, 30%);
-  box-sizing: border-box;
-  z-index: -1;
-
-  font-size: 30px;
-  font-weight: 600;
-  color: #fff;
-}
-
-.hoverBox:hover .imgBox {
-  z-index: 5;
-}
-
-.infoList {
-  padding: 5px 10px;
-  cursor: pointer;
-
-}
-
-.infoList:hover {
-  background-color: #ccc;
+  padding: 0;
+  text-align: center;
 }
 
 .rubik-bubbles-regular {
@@ -161,18 +15,53 @@
   font-style: normal;
 }
 
-.red {
-  color: red;
-}
+.red { color: red; }
+.blue { color: blue; }
+.yellow { color: gold; }
+.purple { color: purple; }
 
-.blue {
-  color: blue;
+.topMenu {
+  position: relative;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 8px 0;
+  border-radius: 8px;
+  transition: background 0.2s, color 0.2s;
 }
-
-.yellow {
-  color: yellow;
+.topMenu:hover {
+  background: #000;
+  color: #fff;
 }
-
-.purple {
-  color: purple;
+.topMenu > ul {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 36px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px #eee;
+  min-width: 120px;
+  z-index: 10;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.topMenu:hover > ul {
+  display: block;
+}
+.subMenu {
+  padding: 8px 16px;
+  font-size: 16px;
+  color: #333;
+  border-bottom: 1px solid #f0f0f0;
+  background: #fff;
+  border-radius: 0;
+  transition: background 0.2s, color 0.2s;
+}
+.subMenu:last-child {
+  border-bottom: none;
+}
+.subMenu:hover {
+  background: #000;
+  color: #fff;
 }
